feat: ticket building blocks setup
